# nomad-airbnbclone-study

./: README.md  pyproject.toml
config/: authentication.py  settings.py
tweets/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
tweets/migrations/: 0001_initial.py
tweets/templates/: all_tweets.html
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py
